=== master

* Add Database#create_trigger :replace option on PostgreSQL 14+ for CREATE OR REPLACE TRIGGER (jeremyevans)

* Make auto_validations plugin automatically setup no_null_byte validations (jeremyevans)

* Add Model#validates_no_null_byte to validation_helpers plugin (jeremyevans)

=== 5.48.0 (2021-09-01)

* Make the unused_associations plugin association reflection tracking work correctly when combining coverage runs (jeremyevans)

* Add Database#like_without_collate on MSSQL, to avoid using COLLATE on LIKE arguments, which can significantly improve performance (jeremyevans)

* Add Model::Errors#full_message private method for easiest i18n support for errors with multiple attributes (jeremyevans) (#1779)

=== 5.47.0 (2021-08-01)

* Make the unused_associations plugin track access to association reflections to determine whether associations are used (jeremyevans)

* Support :db option for join tables in {many,one}_through_many to use a separate query for each join table (jeremyevans)

* Support :join_table_db option for many_to_many/one_through_one associations, to use a separate query for the join table (jeremyevans)

* Support :allow_eager_graph and :allow_filtering_by association options (jeremyevans)

* Add Database#rename_tables on MySQL, for renaming multiple tables in a single call (nick96) (#1774)

* Support Dataset#returning on SQLite 3.35+ (jeremyevans)

=== 5.46.0 (2021-07-01)

* Add unused_associations plugin, for determining which associations and association methods are not used (jeremyevans)

* Make nil :setter/:adder/:remover/:clearer association options not create related methods (jeremyevans)

=== 5.45.0 (2021-06-01)

* Fix handling of NULL values in boolean columns in the ODBC adapter (jeremyevans) (#1765)

* Add auto_validations_constraint_validations_presence_message plugin for auto_validations/constraint_validations presence message integration (jeremyevans)
